[feat/week06] 6.3.3 added GetChatHistory and e2e-tests
