# cmd/chat-service/server_manager.go
@@ -8,6 +8,7 @@ import (
 	keycloakclient "github.com/Pickausernaame/chat-service/internal/clients/keycloak"
 	"github.com/Pickausernaame/chat-service/internal/config"
 	chatsrepo "github.com/Pickausernaame/chat-service/internal/repositories/chats"
+	messagesrepo "github.com/Pickausernaame/chat-service/internal/repositories/messages"
 	problemsrepo "github.com/Pickausernaame/chat-service/internal/repositories/problems"
 	"github.com/Pickausernaame/chat-service/internal/server"
 	managerevents "github.com/Pickausernaame/chat-service/internal/server-manager/events"
@@ -17,6 +18,7 @@ import (
 	managerpool "github.com/Pickausernaame/chat-service/internal/services/manager-pool"
 	canreceiveproblems "github.com/Pickausernaame/chat-service/internal/usecases/manager/can-receive-problems"
 	getassignedproblems "github.com/Pickausernaame/chat-service/internal/usecases/manager/get-assigned-problems"
+	getchathistory "github.com/Pickausernaame/chat-service/internal/usecases/manager/get-chat-history"
 	setreadyreceiveproblems "github.com/Pickausernaame/chat-service/internal/usecases/manager/set-ready-receive-problems"
 )
 
@@ -30,6 +32,7 @@ func initServerManager(
 	subscriber eventSubscriber,
 	chatRepo *chatsrepo.Repo,
 	problemRepo *problemsrepo.Repo,
+	msgRepo *messagesrepo.Repo,
 ) (*server.Server, error) {
 	// getting specification
 	v1Swagger, err := managerv1.GetSwagger()
@@ -63,8 +66,14 @@ func initServerManager(
 		return nil, fmt.Errorf("init getAssignedProblems usecase: %v", err)
 	}
 
+	getChatHistory, err := getchathistory.New(getchathistory.NewOptions(msgRepo, problemRepo))
+	if err != nil {
+		return nil, fmt.Errorf("init getChatHistory usecase: %v", err)
+	}
+
 	// initialization v1 handlers
-	v1Handlers, err := managerv1.NewHandlers(managerv1.NewOptions(canReciveProblems, setReadyReceiveProblems, getAssignedProblems))
+	v1Handlers, err := managerv1.NewHandlers(managerv1.NewOptions(canReciveProblems, setReadyReceiveProblems,
+		getAssignedProblems, getChatHistory))
 	if err != nil {
 		return nil, fmt.Errorf("create v1 handlers: %v", err)
 	}
